add history page

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "firestone",
   "version": "1.0.0",
-  "description": "stock quantative trade platformQuantitative tradingplatform",
+  "description": "stock quantative trading platform",
   "author": "aqua",
   "private": true,
   "scripts": {
