--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.0",
-    "bootstrap-vue": "^2.0.0-rc.7",
-    "vue": "^2.5.2",
+    "bootstrap-vue": "^2.0.0",
+    "vue": "^2.6.10",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -78,7 +78,7 @@
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^3.7.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
