--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.1.0",
     "bootstrap-vue": "^2.0.0",
     "vue": "^2.6.10",
