--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.1.0",
     "bootstrap-vue": "^2.0.0",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
